--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
   },
