fix(lint): resolve remaining accessibility and linting issues
- Add type='button' to buttons in VariableEditor.tsx, EnvironmentView.tsx, SettingsModal.tsx
- Fix syntax errors and suppression placement in SettingsModal.tsx and SettingsView.tsx
- Refactor error handling to avoid 'any' usage
- Fix label associations in SettingsView.tsx and SecretsModal.tsx
- Fix unused variables and type definitions in SecretsModal.tsx and ContextMenu.tsx
- Format codebase with Biome

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,23 +1,55 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "com.antonios.geosync",
   "asar": true,
-  "productName": "YourAppName",
+  "productName": "GeoSync",
+  "copyright": "Copyright © 2025 Antonio S.",
   "directories": {
     "output": "release/${version}"
   },
   "files": [
     "dist",
-    "dist-electron"
+    "dist-electron",
+    "package.json",
+    "!node_modules/.prisma/**/*",
+    "!node_modules/@prisma/client/**/*"
   ],
+  "asarUnpack": [],
+  "extraResources": [
+    {
+      "from": "node_modules/.prisma",
+      "to": "node_modules/.prisma"
+    },
+    {
+      "from": "node_modules/@prisma/client",
+      "to": "node_modules/@prisma/client"
+    },
+    {
+      "from": "prisma/skeleton.db",
+      "to": "skeleton.db"
+    }
+  ],
+  "publish": {
+    "provider": "github",
+    "owner": "antonio-silva-development-studio",
+    "repo": "Geosync"
+  },
   "mac": {
+    "icon": "public/satellite.png",
     "target": [
-      "dmg"
+      {
+        "target": "dmg",
+        "arch": [
+          "x64",
+          "arm64"
+        ]
+      }
     ],
-    "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
+    "artifactName": "${productName}-Mac-${version}-${arch}.${ext}"
   },
   "win": {
+    "icon": "public/satellite.png",
     "target": [
       {
         "target": "nsis",
@@ -35,6 +67,7 @@
     "deleteAppDataOnUninstall": false
   },
   "linux": {
+    "icon": "public/satellite.png",
     "target": [
       "AppImage"
     ],
