--- a/package.json
+++ b/package.json
@@ -35,32 +35,22 @@
     "url": "https://github.com/antonio-silva-development-studio/Geosync"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
-    "@vitejs/plugin-react": "^5.1.1",
-    "clsx": "^2.1.1",
     "electron-store": "^11.0.2",
-    "keytar": "^7.9.0",
-    "lucide-react": "^0.555.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-hook-form": "^7.68.0",
-    "react-markdown": "^10.1.0",
-    "rehype-raw": "^7.0.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13",
-    "zustand": "^5.0.9"
+    "keytar": "^7.9.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.1",
@@ -69,14 +59,24 @@
     "husky": "^9.1.7",
     "jsdom": "^27.0.1",
     "lint-staged": "^16.2.7",
+    "lucide-react": "^0.555.0",
     "postcss": "^8.5.6",
     "prisma": "^6.19.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^4.1.13",
+    "zustand": "^5.0.9"
   },
   "main": "dist-electron/main.js"
 }
