chore: automate skeleton database generation for clean builds
- Added scripts/generate-skeleton.mjs to generate a fresh database from schema
- Updated package.json to run skeleton generation before all build tasks
- Added prisma/skeleton.db to .gitignore to prevent tracking of local data
- Removed prisma/skeleton.db from git tracking
- Bumped version to 0.0.5

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "geosync",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx prisma generate && tsc && vite build && electron-builder",
-    "build:mac": "tsc && vite build && electron-builder --mac",
-    "build:win": "tsc && vite build && electron-builder --win",
-    "build:linux": "tsc && vite build && electron-builder --linux",
+    "generate:skeleton": "node scripts/generate-skeleton.mjs",
+    "build": "npm run generate:skeleton && npx prisma generate && tsc && vite build && electron-builder",
+    "build:mac": "npm run generate:skeleton && tsc && vite build && electron-builder --mac",
+    "build:win": "npm run generate:skeleton && tsc && vite build && electron-builder --win",
+    "build:linux": "npm run generate:skeleton && tsc && vite build && electron-builder --linux",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "vitest run",
